# HIT-CS33503-Assignments-Spring-2023

./: .gitattributes  README.md
Assignment-01/: report.md
Assignment-02/: package.json  vite.config.ts
Assignment-02/src/: App.tsx  main.tsx  styles.scss
Assignment-02/src-tauri/: Cargo.toml  tauri.conf.json
Assignment-02/src-tauri/src/: command.rs  config.rs  dao.rs  entity.rs  main.rs  utils.rs
Assignment-02/src-tauri/src/command/: database_crud.rs
Assignment-02/src-tauri/src/config/: mysql_config.rs
Assignment-02/src-tauri/src/dao/: example_special_dao.rs  factory_dao.rs  production_dao.rs
Assignment-02/src-tauri/src/entity/: factory.rs  production.rs
Assignment-02/src-tauri/src/utils/: mysql_utils.rs
Assignment-02/src/components/Container/: Container.tsx
Assignment-02/src/components/DatePicker/: DatePicker.tsx
Assignment-02/src/components/Snackbar/: Snackbar.tsx
Assignment-02/src/components/Table/: Table.tsx
Assignment-02/src/config/: commands.ts
Assignment-02/src/pages/About/: About.module.scss  About.tsx
Assignment-02/src/pages/FactoryInfo/: FactoryInfo.tsx  FactoryManagementInfo.tsx  index.ts
Assignment-02/src/pages/Home/: Home.tsx
Assignment-02/src/pages/Production/: Production.tsx  index.ts
Assignment-02/src/pages/SpecialQuery/: SpecialQuery.tsx  index.ts
Assignment-02/src/router/: index.ts  router.tsx
Assignment-02/src/store/: SettingSlice.ts  ToastSlice.ts  store.ts
Assignment-02/src/utils/: common-utils.ts
Assignment-03/src/: buffer.cpp  main.cpp
